# Stereo-Drone_TLD

./: README.md
OpenTLD_ROS/: compile.m  initcamera.m
OpenTLD_ROS/img/: img_alloc.m  img_blur.m  img_get.m
OpenTLD_ROS/mex/: bb_overlap.mexa64  distance.mexa64  fern.mexa64  linkagemex.mexa64  lk.mexa64  warp.mexa64
OpenTLD_ROS/tld/: functionbw.m  functionrgb.m  tldDisplay.m  tldExample.m  tldInitSource.m
custom_objects_gazebo/: CMakeLists.txt  package.xml
custom_objects_gazebo/launch/: test.launch  test.launch~
custom_objects_gazebo/urdf/: artag.urdf  base.urdf.xacro  box.urdf
disparity_image_proc/launch/: vigir_atlas_sim.launch
drone_TLD/: CMakeLists.txt  package.xml
drone_TLD/src/: shadow.cpp
hector_localization/hector_pose_estimation_core/doc/: Doxyfile  mainpage.dox
hector_localization/hector_pose_estimation_core/src/: pose_estimation.cpp
hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_base.urdf.xacro
hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch~  spawn_quadrotor_with_downward_cam.launch~
hector_quadrotor/hector_quadrotor_gazebo/urdf/: quadrotor_plugins.gazebo.xacro
husky_description/urdf/: base.urdf.xacro  base_tld.urdf.xacro
husky_gazebo/: CMakeLists.txt  global_costmap_params.yaml  local_costmap_params.yaml  multiple_robots.txt  send_goal.txt
husky_gazebo/config/: params_costmap2d.yaml
husky_gazebo/launch/: base_hector.urdf.gazebo.launch  base_tld.urdf.gazebo.launch  frames.gv  hector_box.launch  husky_empty_world.launch  husky_empty_world_hector.launch  husky_empty_world_tld.launch
redobj/: CMakeLists.txt  package.xml
redobj/src/: redobj.cpp
stereo_depth/: CMakeLists.txt  package.xml
stereo_depth/src/: Quaternionstamped.cpp  kinect_depth.cpp  message_filters.cpp  pcl_depth.cpp  stereo_depth_TLD.cpp
teleop_twist_keyboard/: teleop_twist_keyboard.py
(+1198 files in other folders)
